--- a/cn.puma.www/vide/index.html
+++ b/cn.puma.www/vide/index.html
@@ -266,6 +266,302 @@
         </div>
 
 
+        <!-- 不同款式鞋 -->
+        <div id="main-7" class="homeCutOut">
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut01.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>RS-X³ PUZZLE</h1>
+                    <h3>型格重组</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">立即选购</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">查看更多</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut02.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>反季减价享折上85折</h1>
+                    <h3>4月4日-4月30日</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">选购男子</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">选购女子</a>
+                    </div>
+                </div>
+            </div>
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut03.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>初夏新品来袭 运动风玩转街头</h1>
+                    <h3>优惠码PUMANEW</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">选购男子</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">选购女子</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="main-8" class="homeCutOut">
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut04.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>CALI SPORT</h1>
+                    <h3>加州西海岸风情</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">立即选购</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">查看更多</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut05.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>FUTURE RIDER</h1>
+                    <h3>重塑休闲酷街风</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">立即选购</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">查看更多</a>
+                    </div>
+                </div>
+            </div>
+            <div class="cp-homeCutOut-item">
+                <a href="">
+                    <img src="../image/index/homeCutOut06.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h1>初夏与少年</h1>
+                    <h3>RS-X MASTER休闲鞋款全新上市</h3>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">选购男子</a>
+                    </div>
+                    <div class="link-btn">
+                        <a href="" class=" link-box">查看更多RS鞋款</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 鞋子轮播图 -->
+        <div class="box">
+            <h3 class="box-top"> 您可能会喜欢</h3>
+            <div>
+                <dl id="roll">
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll01.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll02.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll03.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll04.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll05.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll06.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll07.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <dd>
+                        <a href="">
+                            <img src="../image/index/roll08.jpg" alt="">
+                            <object data="" type="">
+                                <a href="" class="black-border">
+                                    立即选购
+                                </a>
+                            </object>
+                        </a>
+                        <div class="line"></div>
+                        <div class="title">
+                            <p>BARI MID </p>
+                            <p>男女同款休闲鞋</p>
+                            <p class="currentPrice">
+                                <span>¥499.00</span>
+                            </p>
+                        </div>
+                    </dd>
+                    <span class="prev"><img src="../image/index/prev01.png" alt=""></span>
+                    <span class="next">
+                        <img src="../image/index/prev02.png" alt="">
+                    </span>
+                </dl>
+            </div>
+
+        </div>
+        <!-- 底部 -->
+        <footer  class="cp-footer">
+            <div class="top-wrap">
+                <div class="top">
+                    <a href="" class="logo router-link-active">
+                        <i class="iconfont icon-footer-logo-m"></i>
+                    </a>
+                    <div class="booking">
+                        <div class="tit">
+                            <i class="icon-ico-email-m">
+                                <span>订阅邮件</span>
+                            </i>
+                        </div>
+                        <div class="ipt-box">
+                            <div class="ipt-control">
+                                <input type="text" placeholder="请输入您的邮箱地址" class="cafe-input">
+                            </div>
+                            <button>
+                                <i class="icon-arrow-wd">
+                                </i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+
+
+
+
+
+
+
+        
 
 
 
@@ -284,11 +580,36 @@
 
 
 
-        <!-- jquery -->
-        <script src="../lib/jquery/jquery-3.4.1.min.js"></script>
-        <!-- 页面js -->
-        <script src="../js/index.js"></script>
 
+
+
+
+
+
+
+
+
+
+    </div>
+    <script>
+        // $(".box").superSlider({
+        //     prevBtn: 	 ".prev",//左按钮
+        //     nextBtn: 	 ".next",//右按钮
+        //     listCont:    "#roll",//滚动列表外层
+        //     scrollWhere: "prev",//自动滚动方向next
+        //     delayTime: 	 1000,//自动轮播时间间隔
+        //     speed: 		 300,//滚动速度
+        //     amount: 	 1,//单次滚动数量
+        //     showNum: 	 4,//显示数量
+        //     autoPlay: 	 true//自动播放
+        // });
+    </script>
+    <!-- jquery -->
+    <script src="../lib/jquery/jquery-3.4.1.min.js"></script>
+    <!-- 页面js -->
+    <script src="../js/index.js"></script>
+    <!-- 轮播图插件 -->
+    <script src="../lib/jquery/super_slider.js"></script>
 
 
 
