--- a/cn.puma.www/vide/index.html
+++ b/cn.puma.www/vide/index.html
@@ -528,29 +528,199 @@
 
         </div>
         <!-- 底部 -->
-        <footer  class="cp-footer">
+        <footer class="cp-footer">
+            <!-- 底部黑色顶部 -->
             <div class="top-wrap">
                 <div class="top">
-                    <a href="" class="logo router-link-active">
-                        <i class="iconfont icon-footer-logo-m"></i>
+                    <a href="" class="router-link-active">
+                        <i class=" icon-footer-logo-m">
+                            <img src="../image/index/logo.png" alt="">
+                        </i>
                     </a>
                     <div class="booking">
                         <div class="tit">
                             <i class="icon-ico-email-m">
-                                <span>订阅邮件</span>
+                                <img src="../image/index/icon-footer.png" alt="">
+                                <p>订阅邮件</p>
                             </i>
                         </div>
                         <div class="ipt-box">
                             <div class="ipt-control">
                                 <input type="text" placeholder="请输入您的邮箱地址" class="cafe-input">
                             </div>
-                            <button>
+                            <button type="submit">
                                 <i class="icon-arrow-wd">
+                                    <img src="../image/index/anljiant.png" alt="">
                                 </i>
                             </button>
                         </div>
                     </div>
                 </div>
+            </div>
+
+
+            <!-- 底部导航 -->
+            <div class="content-wrap">
+                <div class="content-ss">
+                    <div class="content">
+                        <div class="contact">
+                            <h4>
+                                <p>
+                                    <img src="../image/index/contact01.png" alt="">
+                                    <span>联系我们</span>
+                                </p>
+                            </h4>
+                            <div class="listbox">
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">热线电话： 400-821-5065</a>
+                                    </p>
+                                </div>
+                                <div class="item addMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">周一至周日 9:00-18:00</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">联系在线客服</a>
+                                    </p>
+                                </div>
+                                <div class="item addMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">周一至周日 9:00-22:00</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">客服邮箱：cs.ecom.cn@puma.com</a>
+                                    </p>
+                                </div>
+                                <p>
+                                    <img src="../image/index/iconlogo01.png" alt="" class="iconlogo">
+                                    <a href="" class="no-link">周一至周日 9:00-22:00</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <h4>
+                                <p>
+                                    <img src="../image/index/contact02.png" alt="">
+                                    <span>联系我们</span>
+                                </p>
+                            </h4>
+                            <div class="listbox">
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">帮助中心</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">退换货规则</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">隐私政策</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">使用条款</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">订单查询</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <h4>
+                                <p>
+                                    <img src="../image/index/contact03.png" alt="">
+                                    <span>联系我们</span>
+                                </p>
+                            </h4>
+                            <div class="listbox">
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">公司简介</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">公司新闻</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">媒体中心</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">投资者</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">可持续性发展</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">工作机会</a>
+                                    </p>
+                                </div>
+                                <div class="item delectMargin addImgpadding">
+                                    <p>
+                                        <a href="" class="no-link">员工福利</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 商业标 -->
+                <div class="copy-right-wrap">
+                    <div class="copy-right">
+                        <div class="lt">
+                            <p>PUMA CHINA LIMITED 2020 保留所有权</p>
+                            <div class="more">
+                                <p>PUMA 简介 <a href="">了解更多</a></p>
+                            </div>
+                            <div class="none-sm">
+                                <p>
+                                    <a href="">
+                                        <span><img src="../image/index/none-sm01.png" alt=""></span>
+                                        <span>沪公网安备 31010102002087号</span>
+                                    </a>
+                                </p>
+                                <p>
+                                    <a href="">
+                                        <span><img src="../image/index/none-sm02.png" alt=""></span>
+                                        <span>上海工商营业执照沪ICP备10003828号-5</span>
+                                    </a>
+                                </p>
+                                <p>
+                                    <a href="">
+                                        <span><img src="../image/index/none-sm02.png" alt=""></span>
+                                        <span>网购（订餐）大家评</span>
+                                    </a>
+                                </p>
+                            </div>
+                            <div class="footerShare">
+                                <a href=""><img src="../image/index/footerShare01.png" alfooterSharet=""></a>
+                                <a href=""><img src="../image/index/footerShare02.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </footer>
 
@@ -561,7 +731,7 @@
 
 
 
-        
+
 
 
 
