--- a/cn.puma.www/entry.html
+++ b/cn.puma.www/entry.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
-
-    <!-- <script src="./lib/jquery-3.4.1.min.js"></script> -->
-    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href="./css/entry.css">
 </head>
 
 <body>
@@ -139,394 +135,91 @@
                 <img src="./image/index/fh.png" alt="">
             </i>
         </div>
-        <!-- 男子黄色体恤 -->
-        <div class="activity" id="main-1">
-            <a href="">
-                <img src="./image/index/activity01.jpg" alt="">
-            </a>
-            <!-- 男子黄色体恤左边导航  -->
-            <div class="activity-flet">
-                <h1>
-                    PUMA X <br>
-                    THE HUNDREDS
-                </h1>
-                <h3>
-                    重返复古街头 续写多元潮流
-                </h3>
-                <div class="activity-fl">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                    <a href="" class=" clp-btn-white">查看更多</a>
-                </div>
 
-            </div>
+        <!-- 我的账号 -->
+        <div class="login-register-title">
+            我的账号
         </div>
-
-        <!-- 杨洋系列 -->
-        <div id="main-2" class=" fullBleedHero">
-            <a href="summer.html">
-                <img src="./image/index/activity02.jpg" alt="">
-            </a>
-            <div class="activity-right">
-                <h1>
-                    SUMMER<br>
-                    FANTASY
-                </h1>
-                <h3>
-                    「盛夏幻游」系列全新上市
-                </h3>
-                <div class="activity-fl">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                    <a href="" class=" clp-btn-white">查看更多</a>
-                </div>
-
-            </div>
-        </div>
-
-        <!-- 限定篮球鞋 -->
-        <div class="activiss" id="main-3">
-            <a href="">
-                <img src="./image/index/activity03.jpg" alt="">
-            </a>
-            <!-- 男子黄色体恤左边导航  -->
-            <div class="ac 限定篮球鞋tivity-flet">
-                <h1>
-                    SKY MODERN
-                </h1>
-                <h3>
-                    复活节限定篮球鞋款 缤纷上市
-                </h3>
-                <div class="activity-fl">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                    <a href="" class=" clp-btn-white">查看更多</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- 蔡依林系列 -->
-        <div class="cylHero" id="main-4">
-            <a href="">
-                <img src="./image/index/activity04.jpg" alt="">
-            </a>
-            <!-- 蔡依林系列中间导航  -->
-            <div class="activity-center">
-                <h1>
-                    LQDCELL OPTIC
-                </h1>
-                <h3>
-                    科技混搭
-                </h3>
-                <div class="activity-zj">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                    <a href="" class=" clp-btn-white">查看更多</a>
-                </div>
-            </div>
-
-
-
-
-
-
-        </div>
-
-        <!-- 潮流 -->
-        <div class="scksfd" id="main-5">
-            <a href="">
-                <img src="./image/index/activity05.jpg" alt="">
-            </a>
-            <!-- 潮流左边导航  -->
-            <div class="activity-flet">
-                <h1>
-                    PUMA X <br>
-                    RANDOMEVENT
-                </h1>
-                <h3>拒绝设限 玩造潮流
-                </h3>
-                <div class="activity-fl">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- 资源一线-->
-        <div class="mdmsfdsd" id="main-6">
-            <a href="">
-                <img src="./image/index/activity06.jpg" alt="">
-            </a>
-            <!-- 资源一线左边导航  -->
-            <div class="activity-flet">
-                <h1>
-                    FIRST MILE
-                </h1>
-                <h3>再造之力 源自第一线
-                </h3>
-                <div class="activity-fl">
-                    <a href="" class=" clp-btn-white">立即选购</a>
-                    <a href="" class=" clp-btn-white">查看更多</a>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- 不同款式鞋 -->
-        <div id="main-7" class="homeCutOut">
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut01.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>RS-X³ PUZZLE</h1>
-                    <h3>型格重组</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">立即选购</a>
-                    </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">查看更多</a>
+        <!-- 登录注册栏 -->
+        <div class="login-register-wrap">
+            <!-- 登录 -->
+            <div class="login">
+                <div class="cp-login">
+                    <div class="login-title">登录</div>
+                    <div class="login-form">
+                        <form action="">
+                            <div class="input-container">
+                                <div class="form-input">
+                                    <input type="text" placeholder="手机号码*" class="form-input">
+                                </div>
+                            </div>
+                            <div class="input-container">
+                                <div class="form-input">
+                                    <input type="password" placeholder="密码*" class="form-input">
+                                </div>
+                                <i><img src="" alt=""></i>
+                            </div>
+                            <div class="remeber">
+                                <div class="center">
+                                    <input type="checkbox" class="start">
+                                    <div class="label-content">记住我</div>
+                                </div>
+                                <a href="" class="remeber-msg"> 忘记密码？</a>
+                            </div>
+                            <div class="btn-login">
+                                <div class="btn btn-black">登录</div>
+                            </div>
+                            <div class="social center ">
+                                <span>您还能使用其他方式登录：</span>
+                                <div class="icon-box ">
+                                    <a href=""><img src="./image/index/icon-box01.png" alt=""></a>
+                                    <a href=""><img src="./image/index/icon-box02.png" alt=""></a>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
 
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut02.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>反季减价享折上85折</h1>
-                    <h3>4月4日-4月30日</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">选购男子</a>
+            <!-- 注册 -->
+            <div class="register">
+                <div class="cp-register">
+                    <div class="register-title">注册</div>
+                    <div class="register-form">
+                        <form action="">
+                            <div class="input-container">
+                                <div class="form-input">
+                                    <input type="text" placeholder="手机号码*" class="form-input">
+                                </div>
+                            </div>
+                            <div class="input-container">
+                                <div class="form-input">
+                                    <input type="password" placeholder="密码*" class="form-input">
+                                </div>
+                                <i><img src="" alt=""></i>
+                            </div>
+                            <div class="input-container">
+                                <div class="form-input">
+                                    <input type="password" placeholder="确定密码*" class="form-input">
+                                </div>
+                                <i><img src="" alt=""></i>
+                            </div>
+                            <div class="remeber">
+                                <div class="center">
+                                    <input type="checkbox" class="start">
+                                    <div class="label-content">注册即代表您同意PUMA的
+                                        <a href="">使用条款</a>和<a href="">隐私政策</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="btn-login">
+                                <div class="btn btn-black">注销</div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">选购女子</a>
-                    </div>
+
                 </div>
             </div>
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut03.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>初夏新品来袭 运动风玩转街头</h1>
-                    <h3>优惠码PUMANEW</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">选购男子</a>
-                    </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">选购女子</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="main-8" class="homeCutOut">
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut04.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>CALI SPORT</h1>
-                    <h3>加州西海岸风情</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">立即选购</a>
-                    </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">查看更多</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut05.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>FUTURE RIDER</h1>
-                    <h3>重塑休闲酷街风</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">立即选购</a>
-                    </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">查看更多</a>
-                    </div>
-                </div>
-            </div>
-            <div class="cp-homeCutOut-item">
-                <a href="">
-                    <img src="./image/index/homeCutOut06.jpg" alt="">
-                </a>
-                <div class="contentdd">
-                    <h1>初夏与少年</h1>
-                    <h3>RS-X MASTER休闲鞋款全新上市</h3>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">选购男子</a>
-                    </div>
-                    <div class="link-btn">
-                        <a href="" class=" link-box">查看更多RS鞋款</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- 鞋子轮播图 -->
-        <div class="box">
-            <h3 class="box-top"> 您可能会喜欢</h3>
-            <div>
-                <dl id="roll">
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll01.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll02.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll03.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll04.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll05.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll06.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll07.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <dd>
-                        <a href="">
-                            <img src="./image/index/roll08.jpg" alt="">
-                            <object data="" type="">
-                                <a href="" class="black-border">
-                                    立即选购
-                                </a>
-                            </object>
-                        </a>
-                        <div class="line"></div>
-                        <div class="title">
-                            <p>BARI MID </p>
-                            <p>男女同款休闲鞋</p>
-                            <p class="currentPrice">
-                                <span>¥499.00</span>
-                            </p>
-                        </div>
-                    </dd>
-                    <span class="prev"><img src="./image/index/prev01.png" alt=""></span>
-                    <span class="next">
-                        <img src="./image/index/prev02.png" alt="">
-                    </span>
-                </dl>
-            </div>
-
         </div>
         <!-- 底部 -->
         <footer class="cp-footer">
@@ -728,47 +421,25 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- jquery -->
+        <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
+        <!-- 页面js -->
+        <script src="./js/index.js"></script>
+
     </div>
-    <script>
-        // $(".box").superSlider({
-        //     prevBtn: 	 ".prev",//左按钮
-        //     nextBtn: 	 ".next",//右按钮
-        //     listCont:    "#roll",//滚动列表外层
-        //     scrollWhere: "prev",//自动滚动方向next
-        //     delayTime: 	 1000,//自动轮播时间间隔
-        //     speed: 		 300,//滚动速度
-        //     amount: 	 1,//单次滚动数量
-        //     showNum: 	 4,//显示数量
-        //     autoPlay: 	 true//自动播放
-        // });
-    </script>
-    <!-- jquery -->
-    <script src="./lib/jquery/jquery-3.4.1.min.js"></script>
-    <!-- 页面js -->
-    <script src="./js/index.js"></script>
-    <!-- 轮播图 -->
-    <script src="./lib/jquery/super_slider.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
