--- a/cn.puma.www/floods.html
+++ b/cn.puma.www/floods.html
@@ -74,7 +74,7 @@
                             <img src="./image/index/links01.png" alt="">
                             <span>在线客服</span>
                         </a>
-                        <a href="">
+                        <a href="./entry.html">
                             <img src="./image/index/links02.png" alt="">
                             <span>登录</span>
                         </a>
@@ -139,14 +139,45 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
         
     </div>
-
-
-
-
-
-
+<!-- 放大镜 -->
+<div class="pdp-content-all">
+    <div class="productDetail-detailInfrom">
+        <h1>SKY MODERN EASTER </h1>
+        <h2>男子篮球鞋</h2>
+        <p class="skuCode">
+            产品编号：
+            <span>19404301</span>
+        </p>
+        <div class="pricebox">
+            <div class="salePrice">¥969.00</div>
+        </div>
+        <p class="discount"></p>
+        <div class="productDetail-imageContent">
+            <div class="goodsscroll">
+                <div class="swiper-box">
+                    <div class="productDetail-largeimg">
+                        <span class="tag-hot">新品</span>
+                        <img src="" alt="" class="cloudzoom">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
