--- a/cn.puma.www/index.html
+++ b/cn.puma.www/index.html
@@ -78,7 +78,7 @@
                             <img src="./image/index/links01.png" alt="">
                             <span>在线客服</span>
                         </a>
-                        <a href="">
+                        <a href="./entry.html">
                             <img src="./image/index/links02.png" alt="">
                             <span>登录</span>
                         </a>
