--- a/cn.puma.www/entry.html
+++ b/cn.puma.www/entry.html
@@ -74,7 +74,7 @@
                             <img src="./image/index/links01.png" alt="">
                             <span>在线客服</span>
                         </a>
-                        <a href="">
+                        <a href="./entry.html">
                             <img src="./image/index/links02.png" alt="">
                             <span>登录</span>
                         </a>
